feat(Grid): add final version

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
       <li><a href="grid-01-aida.html">Grid 01 AIDA</a></li>
       <li><a href="grid-02-powell.html">Grid 02 Kevin Powell</a></li>
       <li><a href="grid-03-aida-width.html">Grid 03 AIDA width</a></li>
-      <li>👉 <a href="grid-04-aida-items.html">Grid 04 AIDA items</a></li>
+      <li><a href="grid-04-aida-items.html">Grid 04 AIDA items</a></li>
       <li>👉 <a href="grid-05-aida-items-hugo.html">Grid 05 AIDA items Hugo</a></li>
+      <li>👉 <a href="grid-06-aida-items-mobile-tablet.html">Grid 06 AIDA items mobile tablet</a></li>
     </ul>
-  </nav>
-  
+  </nav>  
 </body>
 </html>
